--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "svelte-app",
+  "name": "v2-sales-settlement",
   "version": "1.0.0",
+  "homepage": "https://settlement.clonesneverdie.com",
   "private": true,
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-waffle": "2.0.1",
@@ -18,6 +21,7 @@
     "@tsconfig/svelte": "^2.0.0",
     "dotenv": "10.0.0",
     "ethers": "5.4.6",
+    "gh-pages": "3.2.3",
     "hardhat-abi-exporter": "2.3.0",
     "path": "0.12.7",
     "rollup": "^2.3.4",
